[tool.poetry]
name = "pilotwire-controller"
version = "0.0.0"
description = ""
license = "GPL-3.0"
authors = ["Arnaud Rocher <arnaud.roche3@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
rpyc = "^4.0"
fire = "^0.1.3"
cached-property = "^1.5"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.6"
flake8-bugbear = "^18.8"
flake8-comprehensions = "^1.4"
pep8-naming = "^0.7.0"
pylint = "^2.2"
pytest = "^4.0"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
pytest-isort = "^0.2.1"
pytest-pylint = "^0.13.0"
pytest-mock = "^1.10"
pytest-black = "^0.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
