[metadata]
name = pilotwire-controller
summary = Electrical heaters driving controller
description-file = README.rst
home-page = https://github.com/cailloumajor/home-web
author = Arnaud Rocher
author_email = arnaud.roche3@gmail.com
license = GPLv3+

[files]
packages = pilotwire_controller

[entry_points]
console_scripts =
    pwcontrollerd = pilotwire_controller.daemon:main
pilotwire.controller =
    piface = pilotwire_controller.controller.piface:PiFaceController
    test = pilotwire_controller.controller.testing:TestingController

[pbr]
skip_authors = true
skip_changelog = true
