[metadata]
name = pilotwire-controller
summary = Electrical heaters driving controller
description-file = README.rst
home-page = https://github.com/cailloumajor/pilotwire-controller
author = Arnaud Rocher
author_email = arnaud.roche3@gmail.com
license = GPLv3+

[files]
packages = pilotwire_controller
